--- a/infosys_dashboard.html
+++ b/infosys_dashboard.html
@@ -105,12 +105,14 @@
     }
 
     .sidebar a {
+      width: 100%;
       padding: 0.8rem 1.5rem;
       text-decoration: none;
       color: white;
       display: flex;
       align-items: center;
       gap: 10px;
+      box-sizing: border-box;
     }
 
     .sidebar a:hover {
