--- a/infosys_dashboard.html
+++ b/infosys_dashboard.html
@@ -35,7 +35,14 @@
       z-index: 100;
     }
 
-    .topbar .logo img {
+      .topbar .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      cursor: pointer;
+    }
+
+      .topbar .logo img {
       height: 200px;
     }
 
