--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       box-shadow: -4px 0 20px rgba(0, 0, 0, .05);
       overflow: auto;
       position: relative;
+      justify-content: center;
+      height: 100vh;
     }
     .panel img.logo {
       width: 300px;
