--- a/modules/configuracoes.html
+++ b/modules/configuracoes.html
@@ -1,1 +1,193 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Configurações - InfoSys</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <style>
+    :root {
+      --azul: #38b6ff;
+      --rosa: #eb0d9f;
+      --cinza-claro: #f9f9f9;
+      --cinza-borda: #ccc;
+    }
 
+    body {
+      font-family: Arial, sans-serif;
+      background: var(--cinza-claro);
+      margin: 0;
+      padding: 0;
+    }
+
+    .topbar {
+      width: 100%;
+      height: 60px;
+      background: #fff;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 1.5rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 100;
+    }
+
+    .topbar .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      cursor: pointer;
+    }
+
+    .topbar .logo img {
+      height: 50px;
+    }
+
+    .topbar .user-menu {
+      position: relative;
+      cursor: pointer;
+      margin-right: 3rem;
+    }
+
+    .topbar .user-name {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: var(--rosa);
+      font-family: Arial, sans-serif;
+      font-size: 1rem;
+      font-weight: bold;
+      max-width: 250px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .user-dropdown {
+      display: none;
+      position: absolute;
+      top: 60px;
+      right: 0;
+      background: white;
+      color: black;
+      border-radius: 4px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      min-width: 180px;
+      z-index: 1000;
+    }
+
+    .user-dropdown a {
+      display: block;
+      padding: 10px;
+      text-decoration: none;
+      color: black;
+    }
+
+    .user-dropdown a:hover {
+      background-color: #eee;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 100px auto 0;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 2rem;
+    }
+
+    h2 {
+      color: var(--azul);
+      margin-bottom: 1.5rem;
+    }
+
+    .option-box {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .option-box a {
+      text-decoration: none;
+      background-color: var(--azul);
+      color: white;
+      padding: 1rem;
+      border-radius: 6px;
+      font-weight: bold;
+      text-align: center;
+      transition: background 0.3s ease;
+    }
+
+    .option-box a:hover {
+      background-color: #2fa3e6;
+    }
+  </style>
+</head>
+<body>
+  <!-- Segurança: redireciona para login se não autenticado -->
+  <script>
+    (function() {
+      const token = localStorage.getItem('token');
+      if (location.protocol !== 'file:' && !location.pathname.endsWith('index.html') && !token) {
+        window.location.href = 'index.html';
+      }
+    })();
+  </script>
+
+  <div class="topbar">
+    <a href="infosys_dashboard.html" class="logo">
+      <img src="Horizontal-Branco-SemFundo.png" alt="Logo Idealize">
+    </a>
+    <div class="user-menu" onclick="toggleMenu()">
+      <div class="user-name">
+        <img src="logo_usuario_rosa.png" alt="Usuário" width="28">
+        <span id="nome-usuario"><strong>Carregando...</strong></span>
+      </div>
+      <div class="user-dropdown" id="dropdown">
+        <a href="gerenciar_conta.html">Gerenciar conta</a>
+        <a href="#" onclick="logout()">Sair</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <h2>Configurações de Acesso</h2>
+    <div class="option-box">
+      <a href="usuarios.html">Usuários</a>
+      <a href="cadastro_usuarios.html">Cadastro de Usuários</a>
+    </div>
+  </div>
+
+  <script>
+    const spanNome = document.getElementById("nome-usuario");
+    const nomeLocal = localStorage.getItem("nome_usuario");
+    if (spanNome && nomeLocal) {
+      spanNome.innerHTML = `<strong>${nomeLocal}</strong>`;
+    }
+
+    function toggleMenu() {
+      const dropdown = document.getElementById("dropdown");
+      dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+    }
+
+    function logout() {
+      localStorage.removeItem("token");
+      localStorage.removeItem("nivel");
+      localStorage.removeItem("nome_usuario");
+      localStorage.removeItem("email_usuario");
+      window.location.href = "index.html";
+    }
+
+    document.addEventListener("click", function (event) {
+      const dropdown = document.getElementById("dropdown");
+      const userMenu = document.querySelector(".user-menu");
+      if (!userMenu.contains(event.target)) {
+        dropdown.style.display = "none";
+      }
+    });
+  </script>
+</body>
+</html>
