--- a/infosys_dashboard.html
+++ b/infosys_dashboard.html
@@ -175,7 +175,7 @@
     <a href="#" data-module="modules/clientes_indesejaveis.html"><i class="fas fa-user-slash"></i><span>Clientes Indesejáveis</span></a>
     <a href="#" data-module="modules/anotacoes_importantes.html"><i class="fas fa-sticky-note"></i><span>Anotações Importante</span></a>
     <a href="#" data-module="modules/relatorios.html"><i class="fas fa-file-alt"></i><span>Relatórios</span></a>
-    <a href="configuracoes.html"><i class="fas fa-cogs"></i><span>Configurações</span></a>
+    <a href="#" data-module="modules/configuracoes.html"><i class="fas fa-cogs"></i><span>Configurações</span></a>
   </aside>
 
   <div class="main" id="app">
